Creation Authentication mvp

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,5 @@ lint/outputs/
 lint/tmp/
 # lint/reports/
 
+#Clase con conexiones al servidor
+Organizador/src/main/java/me/dioxo/aecol86/Constantes.java
