--- a/Organizador/src/main/AndroidManifest.xml
+++ b/Organizador/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="me.dioxo.aecol86">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".libs.ApplicationContextProvider"
         android:allowBackup="true"
