--- a/Organizador/src/main/AndroidManifest.xml
+++ b/Organizador/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity
             android:name=".NavigationDrawer.NavigationDrawer"
             android:label="@string/title_activity_navigation_drawer"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".Information.InformationActivity"></activity>
     </application>
 
 </manifest>
