--- a/Estudiante/src/main/AndroidManifest.xml
+++ b/Estudiante/src/main/AndroidManifest.xml
@@ -6,13 +6,14 @@
 
     <application
         android:name=".libs.ApplicationContextProvider"
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".Register.RegisterActivity"></activity>
         <activity android:name=".Authentication.Authentication">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
