Creation RegisterOtros Activity

--- a/Estudiante/src/main/AndroidManifest.xml
+++ b/Estudiante/src/main/AndroidManifest.xml
@@ -13,10 +13,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".RegisterOtros.RegisterOtros"></activity>
         <activity
             android:name=".Navigation.NavigationDrawer"
             android:label="@string/title_activity_navigation_drawer"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Register.RegisterActivity" />
         <activity android:name=".Authentication.Authentication">
             <intent-filter>
